5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1723_2496.log
== TEST (2019-05-07 18:26:02) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num >= 0 and num < 100):
	soma = soma + num
	num = int(input("Digite um numero: "))
	print(soma)
-- ERROR:
File "XXXX", line 1
    x = int(ix = int(input("Digite um numero:)))
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 18:26:19) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num >= 0 and num < 100):
	soma = soma + num
	num = int(input("Digite um numero: "))
	print(soma)
-- EXECUTION TIME:
0.183119
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 18:26:54) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num >= 0 and num <= 100):
	soma = soma + num
	num = int(input("Digite um numero: "))
	print(soma)
-- ERROR:
File "XXXX", line 1
    x = int(ix = int(input("Digite um numero:)))
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 18:26:57) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num >= 0 and num <= 100):
	soma = soma + num
	num = int(input("Digite um numero: "))
	print(soma)
-- ERROR:
File "XXXX", line 1
    x = int(ix = int(input("Digite um numero:)))
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 18:27:16) 
-- CODE:
soma = 0
num = int(input("Digite um numero: "))

while (num >= 0 and num <= 100):
	soma = soma + num
	num = int(input("Digite um numero: "))
	print(soma)
-- EXECUTION TIME:
0.170909
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:20:53) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("Digite um numero: "))
if(x == -1):
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if(x == -1):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:26) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("Digite um numero: "))
if(num == -1):
	print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:32) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("Digite um numero: "))
if(num == -1):
	print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:40) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("Digite um numero: "))
if(num == -1):
	print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:21:47) 
-- CODE:
cont = 0
soma = 0
num = int(input("Digite um numero: "))

while (num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("Digite um numero: "))
if(num == -1):
	print(soma)
-- EXECUTION TIME:
0.169057
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:09:29) 
-- CODE:
cont = 0
soma = 0
x = int(input("Digite um numero: "))

while(x != -1):
	soma = soma + x
	cont = cont + x
	x = int(input("Digite um numero: "))
if(x == -1):
	print(soma)
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:09:43) 
-- CODE:
cont = 0
soma = 0
x = int(input("Digite um numero: "))

while(x != -1):
	soma = soma + x
	cont = cont + x
	x = int(input("Digite um numero: "))
if(x == -1):
	print(soma)
	
-- EXECUTION TIME:
0.141487
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
